--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -39,23 +40,31 @@ android {
 
 dependencies {
 
+    // api splashScreen
+    def splashScreenVersion = "1.0.0"
+    implementation "androidx.core:core-splashscreen:$splashScreenVersion"
 
+    // navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
 
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // coil
     implementation "io.coil-kt:coil:2.2.0"
 
+    // swipe-refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
-    def roomVersion = "2.4.1"
-    kapt "androidx.room:room-compiler:$roomVersion"
-    implementation "androidx.room:room-runtime:$roomVersion"
-    implementation "androidx.room:room-ktx:$roomVersion"
+    // koin
+    def koin_android_version= "3.2.2"
+    implementation "io.insert-koin:koin-android:$koin_android_version"
 
+    //modules
+    implementation project(':data')
+    implementation project(':domain')
+
+    //core
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
