--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.homew3">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".mvvm.model.DataBaseApplication"
+        android:name=".cleanArch.presentation.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,17 +12,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HomeW3"
-        tools:targetApi="31">
+        android:theme="@style/Theme.AppSplash"
+        tools:targetApi="32">
         <activity
-            android:name=".mvvm.view.MainActivity"
+            android:name=".cleanArch.presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
